# MathPipeProver

./: .gitignore  AGENTS.md  CLAUDE.md  INIT.md  PLAN.md  README.md  TODO.md  pyproject.toml
.claude/: settings.json
config/: browser_chatgpt.toml  browser_chatgpt_soft.toml  default.toml  online_openai.toml  production.toml  session_bridge_smoke.toml  test_openai.toml
docs/: browser_chatgpt.md  heartbeat_watcher_mcp.md  lean_formalization.md  lean_pipeline.md  modes_and_governance.md  paper_pipeline.md  scaffolding_review.md  session_bridge_smoke.md  soft_scaffolding.md  workflow_graph.md
mathpipeprover/: axle.py  cli.py  config.py  dotenv_loader.py  ledger.py  orchestrator.py  policies.py  prompting.py  review_parser.py  roles.py  router.py  session_bridge.py  storage.py  supervisor.py
mathpipeprover.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
prompt_fragments/: output_contract.md
prompts/: breakdown.md  consolidator.md  formalizer.md  literature.md  paper_editor.md  paper_writer.md  prover.md  reviewer.md  searcher.md  workflow_router.md
prompts_soft/: 01_formalizer.md  02_literature.md  03_searcher.md  04_breakdown.md  05_prover.md  06_reviewer.md  07_consolidator.md  90_paper_writer.md  91_paper_editor.md  92_paper_reviewer.md  breakdown.md  literature.md  paper_editor.md  paper_reviewer.md  paper_writer.md  prover.md  reviewer.md  workflow_router.md
scripts/: chatgpt_browser_agent.sh  chatgpt_browser_cdp.sh  chatgpt_browser_supervisor.sh  chatgpt_heartbeat_watch.sh  session_bridge_smoke.py
tests/: test_axle.py  test_heartbeat.py  (+14 more)
(+140 files in other folders)
